--- a/templates/base.html
+++ b/templates/base.html
@@ -22,22 +22,26 @@
 
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="#!" class="brand-logo">larder</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-hamburger"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">Javascript</a></li>
-                    <li><a href="mobile.html">Mobile</a></li>
+                    <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
+                    <li><a href="#">profile</a></li>
+                    <li><a href="#">add recipe</a></li>
+                    <li><a href="#">log out</a></li>
+                    <li><a href="#">log in</a></li>
+                    <li><a href="{{ url_for('get_recipes') }}">register</a></li>
                 </ul>
             </div>
         </nav>
 
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
+            <li><a href="#">profile</a></li>
+            <li><a href="#">add recipe</a></li>
+            <li><a href="#">log out</a></li>
+            <li><a href="#">log in</a></li>
+            <li><a href="{{ url_for('get_recipes') }}">register</a></li>
         </ul>
 
     </header>
