--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <h3 class="center-align">register</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
         <div class="card">
             <div class="input-field col s6">
                 <div class="input-field col s12">
