--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">register</h3>
+<h3 class="center-align">log in</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
-        <div class="card">
-            <div class="input-field col s12">
-                <i class="fas fa-user-plus prefix"></i>
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+        <div class="row">
+            <div class="input-field col s6">
+                <i class="fas fa-user-cog prefix"></i>
                 <input id="username" name="username" type="text" class="validate">
                 <label for="username">username</label>
             </div>
-
-
-            <div class="input-field col s12">
+            <div class="input-field col s6">
                 <i class="fas fa-user-lock prefix"></i>
                 <input id="password" name="password" type="password" class="validate">
-                <label for="password">password</label>
+                <label for="password"></label>
             </div>
             <div class="row">
-                <button type="submit" class="col s12 btn-large">register</button>
+                <button type="submit" class="col s12 btn-large">login</button>
             </div>
         </div>
     </form>
