--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                     <li><a href="#">add recipe</a></li>
                     <li><a href="#">log out</a></li>
-                    <li><a href="#">log in</a></li>
+                    <li><a href="{{ url_for('login') }}">log in</a></li>
                     <li><a href="{{ url_for('register') }}">register</a></li>
                 </ul>
             </div>
@@ -40,7 +40,7 @@
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="#">add recipe</a></li>
             <li><a href="#">log out</a></li>
-            <li><a href="#">log in</a></li>
+            <li><a href="{{ url_for('login') }}">log in</a></li>
             <li><a href="{{ url_for('register') }}">register</a></li>
         </ul>
 
