fixed redirect in logout function

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
                     <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                     <li><a href="#">add recipe</a></li>
-                    <li><a href="#">log out</a></li>
+                    <li><a href="{{ url_for('logout') }}">log out</a></li>
                     <li><a href="{{ url_for('login') }}">log in</a></li>
                     <li><a href="{{ url_for('register') }}">register</a></li>
                 </ul>
@@ -39,7 +39,7 @@
             li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="#">add recipe</a></li>
-            <li><a href="#">log out</a></li>
+            <li><a href="{{ url_for('logout') }}">log out</a></li>
             <li><a href="{{ url_for('login') }}">log in</a></li>
             <li><a href="{{ url_for('register') }}">register</a></li>
         </ul>
