--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
                     <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
-                    <li><a href="#">add recipe</a></li>
+                    <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
                     <li><a href="{{ url_for('logout') }}">log out</a></li>
                     <li><a href="{{ url_for('login') }}">log in</a></li>
                     <li><a href="{{ url_for('register') }}">register</a></li>
@@ -38,7 +38,7 @@
         <ul class="sidenav" id="mobile-demo">
             li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
-            <li><a href="#">add recipe</a></li>
+            <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
             <li><a href="{{ url_for('logout') }}">log out</a></li>
             <li><a href="{{ url_for('login') }}">log in</a></li>
             <li><a href="{{ url_for('register') }}">register</a></li>
