--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,18 +3,69 @@
 
 <h3 class="center-align">add recipe</h3>
 
-<div class="row">
+<div class="row card-panel">
     <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
         <div class="row">
-            <div class="input-field col s6">
-                <i class="material-icons prefix"></i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix"></label>
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="course_name" name="course_name" type="text" class="validate">
+                <label for="course_name">course</label>
             </div>
-            <div class="input-field col s6">
-                <i class="material-icons prefix"></i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone"></label>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_name" name="recipe_name" type="text" class="validate">
+                <label for="recipe_name">recipe name</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_chef" name="recipe_chef" type="text" class="validate">
+                <label for="recipe_chef">recipe chef</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_cookbook" name="recipe_cookbook" type="text" class="validate">
+                <label for="recipe_cookbook">recipe cookbook</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_image" name="recipe_image" type="text" class="validate">
+                <label for="recipe_image">recipe image</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate">
+                <label for="recipe_difficulty">recipe difficulty</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_time" name="recipe_time" type="text" class="validate">
+                <label for="recipe_time">recipe time</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                <label for="recipe_ingredients">recipe ingredients</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-user-circle prefix"></i>
+                <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                <label for="recipe_method">recipe method</label>
             </div>
         </div>
     </form>
