--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -68,6 +68,11 @@
                 <label for="recipe_method">recipe method</label>
             </div>
         </div>
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit">add recipe</button>
+            </div>
+        </div>
     </form>
 </div>
 
