--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-hamburger"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('categories') }}">categories</a></li>
-                    <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
+                    <li><a href="{{ url_for('all_recipes') }}">recipes</a></li>
                     <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                     <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
                     <li><a href="{{ url_for('logout') }}">log out</a></li>
@@ -38,7 +38,7 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('categories') }}">categories</a></li>
-            <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
+            <li><a href="{{ url_for('all_recipes') }}">recipes</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
             <li><a href="{{ url_for('logout') }}">log out</a></li>
