added show_recipe.html page and added route in app.py

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,17 +6,19 @@
 <div class="row">
 
     <div class="col s12 m4 center-align">
-        <div class="card small">
-            starters
-        </div>
+        <a href="{{ url_for('all_recipes') }}">
+            <div class="card small green lighten-2">
+                starters
+            </div>
+        </a>
     </div>
     <div class="col s12 m4 center-align">
-        <div class="card small">
+        <div class="card small green lighten-2">
             mains
         </div>
     </div>
     <div class="col s12 m4 center-align">
-        <div class="card small">
+        <div class="card small green lighten-2">
             desserts
         </div>
     </div>
@@ -26,17 +28,17 @@
 <div class="row">
 
     <div class="col s12 m4 center-align">
-        <div class="card small">
+        <div class="card small green lighten-2">
             sides
         </div>
     </div>
     <div class="col s12 m4 center-align">
-        <div class="card small">
+        <div class="card small green lighten-2">
             cakes and biscuits
         </div>
     </div>
     <div class="col s12 m4 center-align">
-        <div class="card small">
+        <div class="card small green lighten-2">
             drinks
         </div>
     </div>
