--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -4,7 +4,7 @@
 <h3 class="center-align">edit recipe</h3>
 
 <div class="row card-panel">
-    <form class="col s12" method="POST" action="{{ url_for('edit_recipe') }}">
+    <form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-user-circle prefix"></i>
