added container class to templates

--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -3,6 +3,8 @@
 
 <h3 class="center-align">Recipe</h3>
 
-<p>Testing to see if this works</p>
+<div class="container">
+    <p>Testing to see if this works</p>
+</div>
 
 {% endblock %}
