--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,46 +3,48 @@
 
 <h3 class="center-align">categories</h3>
 
-<div class="row">
+<div class="container">
+    <div class="row">
 
-    <div class="col s12 m4 center-align">
-        <a href="{{ url_for('all_recipes') }}">
+        <div class="col s12 m4 center-align">
+            <a href="{{ url_for('all_recipes') }}">
+                <div class="card small green lighten-2">
+                    starters
+                </div>
+            </a>
+        </div>
+        <div class="col s12 m4 center-align">
             <div class="card small green lighten-2">
-                starters
+                mains
             </div>
-        </a>
-    </div>
-    <div class="col s12 m4 center-align">
-        <div class="card small green lighten-2">
-            mains
         </div>
-    </div>
-    <div class="col s12 m4 center-align">
-        <div class="card small green lighten-2">
-            desserts
+        <div class="col s12 m4 center-align">
+            <div class="card small green lighten-2">
+                desserts
+            </div>
         </div>
+
     </div>
 
-</div>
+    <div class="row">
 
-<div class="row">
+        <div class="col s12 m4 center-align">
+            <div class="card small green lighten-2">
+                sides
+            </div>
+        </div>
+        <div class="col s12 m4 center-align">
+            <div class="card small green lighten-2">
+                cakes and biscuits
+            </div>
+        </div>
+        <div class="col s12 m4 center-align">
+            <div class="card small green lighten-2">
+                drinks
+            </div>
+        </div>
 
-    <div class="col s12 m4 center-align">
-        <div class="card small green lighten-2">
-            sides
-        </div>
     </div>
-    <div class="col s12 m4 center-align">
-        <div class="card small green lighten-2">
-            cakes and biscuits
-        </div>
-    </div>
-    <div class="col s12 m4 center-align">
-        <div class="card small green lighten-2">
-            drinks
-        </div>
-    </div>
-
 </div>
 
 {% endblock %}
