--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -13,7 +13,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
                             class="material-icons right"></i></span>
-                    <p><a href="{{ url_for('show_recipe') }}">Full recipe...</a></p>
+                    <p><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">{{ recipe.recipe_name }}<i
@@ -28,7 +28,7 @@
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
                             class="btn-large red">delete</a><br>
-                        <a href="{{ url_for('show_recipe') }}">Full recipe...</a>
+                        <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a>
                     </p>
                 </div>
             </div>
