--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -5,6 +5,15 @@
 
 <div class="container">
     <p>Testing to see if this works</p>
+    {{ recipe.category_name }}<br>
+    {{ recipe.recipe_name }}<br>
+    {{ recipe.recipe_chef }}<br>
+    {{ recipe.recipe_cookbook }}<br>
+    {{ recipe.recipe_image }}<br>
+    {{ recipe.recipe_difficulty }}<br>
+    {{ recipe.recipe_ingredients }}<br>
+    {{ recipe.recipe_method }}<br>
+
 </div>
 
 {% endblock %}
