--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -9,14 +9,13 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-circle prefix"></i>
-                    <select id="category_name" name="course_name" class="validate" required>
+                    <select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled selected>Which category does your recipe belong to?</option>
                         {% for category in categories %}
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
                     </select>
-                    <input id="course_name" name="course_name" type="text" class="validate">
-                    <label for="course_name"></label>
+                    <label for="category_name"></label>
                 </div>
             </div>
             <div class="row">
