--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -13,6 +13,8 @@
     {{ recipe.recipe_difficulty }}<br>
     {{ recipe.recipe_ingredients }}<br>
     {{ recipe.recipe_method }}<br>
+    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
+    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large red">delete</a><br>
 
 </div>
 
