--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -11,8 +11,11 @@
     {{ recipe.recipe_cookbook }}<br>
     {{ recipe.recipe_image }}<br>
     {{ recipe.recipe_difficulty }}<br>
-    {{ recipe.recipe_ingredients }}<br>
-    {{ recipe.recipe_method }}<br>
+    {% for ing in recipe.recipe_ingredients %}
+    <li>
+        {{ ing }}
+    </li>
+    {% endfor %}
     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
     <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large red">delete</a><br>
 
