temporarily added extra input lines in add_recipe

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -65,6 +65,15 @@
                     <i class="fas fa-user-circle prefix"></i>
                     <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
                     <label for="recipe_ingredients">recipe ingredients</label>
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
                 </div>
             </div>
             <div class="row">
@@ -72,6 +81,15 @@
                     <i class="fas fa-user-circle prefix"></i>
                     <input id="recipe_method" name="recipe_method" type="text" class="validate">
                     <label for="recipe_method">recipe method</label>
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
                 </div>
             </div>
             <div class="row">
