--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -11,9 +11,16 @@
     {{ recipe.recipe_cookbook }}<br>
     {{ recipe.recipe_image }}<br>
     {{ recipe.recipe_difficulty }}<br>
+    <h4>Ingredients</h4>
     {% for ingredient in recipe.recipe_ingredients %}
     <li>
         {{ ingredient }}
+    </li>
+    {% endfor %}
+    <h4>Method</h4>
+    {% for step in recipe.recipe_method %}
+    <li>
+        {{ step }}
     </li>
     {% endfor %}
     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
