added script for adding ingredients

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -61,35 +61,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-user-circle prefix"></i>
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <label for="recipe_ingredients">recipe ingredients</label>
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                <div class="input-field col s12 input_fields_wrap">
+                    <div><i class="fas fa-user-circle prefix"></i>
+                        <input type="text" id="recipe_ingredients" name="recipe_ingredients">
+                        <label for="recipe_ingredients">recipe ingredients</label>
+                        <button class="add_field_button">Add ing</button>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-user-circle prefix"></i>
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <label for="recipe_method">recipe method</label>
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
-                    <input id="recipe_method" name="recipe_method" type="text" class="validate">
+                <div class="input-field col s12 input_fields_wrap">
+                    <div><i class="fas fa-user-circle prefix"></i>
+                        <input type="text" id="recipe_method" name="recipe_method">
+                        <label for="recipe_method">recipe ingredients</label>
+                        <button class="add_field_button">Add step</button>
+                    </div>
                 </div>
             </div>
             <div class="row">
