--- a/templates/base.html
+++ b/templates/base.html
@@ -105,6 +105,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}""></script>
+    <script src=" {{ url_for('static', filename='js/recipe.js') }}""></script>
     {% block scripts %}
     {% endblock%}
 </body>
