added jQuery for dynamically add/remove input

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -61,20 +61,20 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 input_fields_wrap">
+                <div class="input-field col s12 input_ing_wrap">
                     <div><i class="fas fa-user-circle prefix"></i>
                         <input type="text" id="recipe_ingredients" name="recipe_ingredients">
                         <label for="recipe_ingredients">recipe ingredients</label>
-                        <button class="add_field_button">Add ing</button>
+                        <button class="add_ing_button">Add ing</button>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 input_fields_wrap">
+                <div class="input-field col s12 input_meth_wrap">
                     <div><i class="fas fa-user-circle prefix"></i>
                         <input type="text" id="recipe_method" name="recipe_method">
                         <label for="recipe_method">recipe ingredients</label>
-                        <button class="add_field_button">Add step</button>
+                        <button class="add_meth_button">Add step</button>
                     </div>
                 </div>
             </div>
