--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -61,11 +61,26 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 input_ing_wrap">
-                    <div><i class="fas fa-user-circle prefix"></i>
-                        <input type="text" id="recipe_ingredients" name="recipe_ingredients">
-                        <label for="recipe_ingredients">recipe ingredients</label>
-                        <button class="add_ing_button">Add ing</button>
+                <div class="col s12 m6">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col s12">
+                                <label for="">Ingrdients</label>
+                            </div>
+                        </div>
+                        <div class="input_ing_wrap">
+                            <div class="row">
+                                <div class="col s12">
+                                    <button class="add_ing_button">Add</button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col s12">
+                                    <div><input id="recipe_ingredients" name="recipe_ingredients" type="text"
+                                            class="validate"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
