changed js classes in edit_recipe

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -103,13 +103,13 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col s12">
-                                <label for="">Ingredients</label>
+                                <label for="">Method</label>
                             </div>
                         </div>
-                        <div class="input_ing_wrap">
+                        <div class="input_meth_wrap">
                             <div class="row">
                                 <div class="col s12">
-                                    <button class="add_ing_button">Add</button>
+                                    <button class="add_meth_button">Add</button>
                                 </div>
                             </div>
                             <div class="row">
