--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-circle prefix"></i>
-                    <select id="category_name" name="course_name" class="validate" required>
+                    <select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled>Which category does your recipe belong to?</option>
                         {% for category in categories %}
                         {% if category.category_name == recipe.category_name %}
@@ -19,8 +19,7 @@
                         {% endif %}
                         {% endfor %}
                     </select>
-                    <input id="course_name" name="course_name" type="text" class="validate">
-                    <label for="course_name"></label>
+                    <label for="category_name"></label>
                 </div>
             </div>
             <div class="row">
